Fixed spacing and heading size and changed code block container to fixed width

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ main {
 	display: inline-block;
 	margin: 0;
 	height: auto;
+	width: 80%;
 	text-align: left;
 }
 
